--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <option value="arabic5_9">📖 اللغة العربية (الصفوف 5-9)</option>
       <option value="arabic10">📖 اللغة العربية (الصف العاشر)</option>
       <option value="math5_9">➗ الرياضيات (الصفوف 5-9)</option>
+      <option value="physics">🔬 الفيزياء</option>
+      <option value="science">🧪 العلوم</option>
+      <option value="chemistry">🧫 الكيمياء</option>
+      <option value="biology">🌿 الأحياء</option>
     </select>
 
     <!-- زر البحث -->
@@ -59,7 +63,11 @@
         islamic: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTziRUgn9KjIrOgSxrUuMNHMd1QUkVmaQKC7iBBaX4h355nCOW92woD3mIkfMHhgJ2JACjIEnDRgSYJ/pub?gid=0&single=true&output=csv",
         arabic5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vThjpWAjLmwDFHb3Ub_gBZdd5HnUlq7DgTR2RQR9ontGqrylOHHq7lSCEaka8fu50VkH5OHk6hvX9A1/pub?gid=0&single=true&output=csv",
         arabic10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTM6iQR-4fnD9KYBOpbcOfvXO7-a88-K6q92ZFB3qdGq583nFjMoMegW8MULOoybDsSIr1mNU6RvsuN/pub?gid=0&single=true&output=csv",
-        math5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTDtoNYA9iUQr0Pjk0_hPIFYUFsDricAMFeeHnQ7ozlE3Mun2w2r7ezXT1MmH9-r-vCKSES_5kihPTr/pub?gid=0&single=true&output=csv"
+        math5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTDtoNYA9iUQr0Pjk0_hPIFYUFsDricAMFeeHnQ7ozlE3Mun2w2r7ezXT1MmH9-r-vCKSES_5kihPTr/pub?gid=0&single=true&output=csv",
+        physics: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQfKq9UFhhb8P7cTX4mtlRwzku1F5xZuVMxq_Qmfn3j0yCefJwzjOIEj0CrYG9Je9ubAdRwXZusMuYr/pub?gid=0&single=true&output=csv",
+        science: "https://docs.google.com/spreadsheets/d/e/2PACX-1vShML8jSszGxHx6ESzcgf1DTYyPAvpeiYfhEt_6lxQ6xRBAeqbMa2blTI9lZVRXX-M5FNjAF4oRmLeY/pub?gid=0&single=true&output=csv",
+        chemistry: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz8zyGR6OwEPE8bZt6M22YtkiVdnhx2uuyBfUbMH6BW7725Tn5oHGlOcuGdxPPjw4dO-AJkaGW7ju/pub?gid=0&single=true&output=csv",
+        biology: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSk_TuS5L3YexPjYyLlIL6nHFAvkafQKGCYwwKw57vBo1FWF97RM5oSQPCVKZuWsD9egF5r9gErhzMn/pub?gid=0&single=true&output=csv"
       };
 
       resultDiv.innerHTML = '<p class="text-blue-600 font-semibold">🔄 جاري تحميل البيانات...</p>';
@@ -86,13 +94,8 @@
 
       } catch (error) {
         resultDiv.innerHTML = '<p class="text-red-500 font-semibold">⚠️ حدث خطأ أثناء تحميل البيانات.</p>';
-        console.error('Error fetching data:', error);
       }
     });
-  </script>
-</body>
-</html>
-
   </script>
 </body>
 </html>
