--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <option value="arabic5_9">📖 اللغة العربية (الصفوف 5-9)</option>
       <option value="arabic10">📖 اللغة العربية (الصف العاشر)</option>
       <option value="math5_9">➗ الرياضيات (الصفوف 5-9)</option>
+      <option value="math10">📊 الرياضيات (الصف العاشر)</option>
+      <option value="english5_9">📝 اللغة الإنجليزية (الصفوف 5-9)</option>
+      <option value="english10">📝 اللغة الإنجليزية (الصف العاشر)</option>
       <option value="physics">🔬 الفيزياء</option>
       <option value="science">🧪 العلوم</option>
       <option value="chemistry">🧫 الكيمياء</option>
@@ -64,6 +67,9 @@
         arabic5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vThjpWAjLmwDFHb3Ub_gBZdd5HnUlq7DgTR2RQR9ontGqrylOHHq7lSCEaka8fu50VkH5OHk6hvX9A1/pub?gid=0&single=true&output=csv",
         arabic10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTM6iQR-4fnD9KYBOpbcOfvXO7-a88-K6q92ZFB3qdGq583nFjMoMegW8MULOoybDsSIr1mNU6RvsuN/pub?gid=0&single=true&output=csv",
         math5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTDtoNYA9iUQr0Pjk0_hPIFYUFsDricAMFeeHnQ7ozlE3Mun2w2r7ezXT1MmH9-r-vCKSES_5kihPTr/pub?gid=0&single=true&output=csv",
+        math10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRtOrt04XkbLCsuQTQhSpuxaxKQmJ_NF_ThauuSYBlNoQEWkEPs8xWUcDYDUQcctAXelNeFZxR4-uqZ/pub?gid=0&single=true&output=csv",
+        english5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFFnnz9YGNyyOd0Nd2c2cKCEQoElKl9u5XXIKApL-XV3qucYI-0j-S43_OsF-X8Hhtwj3NaEy7LpeL/pub?gid=0&single=true&output=csv",
+        english10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSKhbG0SfWfab6k5v1rPy5DPa9w-6vgcrVTXm_yZr7QmfLOJi6tAOcAQVeKhztfXO9FtB5Px0e5Y6qb/pub?gid=0&single=true&output=csv",
         physics: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQfKq9UFhhb8P7cTX4mtlRwzku1F5xZuVMxq_Qmfn3j0yCefJwzjOIEj0CrYG9Je9ubAdRwXZusMuYr/pub?gid=0&single=true&output=csv",
         science: "https://docs.google.com/spreadsheets/d/e/2PACX-1vShML8jSszGxHx6ESzcgf1DTYyPAvpeiYfhEt_6lxQ6xRBAeqbMa2blTI9lZVRXX-M5FNjAF4oRmLeY/pub?gid=0&single=true&output=csv",
         chemistry: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz8zyGR6OwEPE8bZt6M22YtkiVdnhx2uuyBfUbMH6BW7725Tn5oHGlOcuGdxPPjw4dO-AJkaGW7ju/pub?gid=0&single=true&output=csv",
@@ -71,30 +77,6 @@
       };
 
       resultDiv.innerHTML = '<p class="text-blue-600 font-semibold">🔄 جاري تحميل البيانات...</p>';
-
-      try {
-        const response = await fetch(subjectLinks[subject]);
-        const csvData = await response.text();
-        const rows = csvData.split('\n').map(row => row.split(','));
-
-        const headers = rows[0];
-        const studentRow = rows.find(row => row[1].trim() === studentId);
-
-        if (!studentRow) {
-          resultDiv.innerHTML = '<p class="text-red-500 font-semibold">❌ لم يتم العثور على بيانات لهذا الطالب.</p>';
-          return;
-        }
-
-        resultDiv.innerHTML = `<h2 class="text-lg font-bold text-gray-700 border-b pb-2 mb-4">📌 بيانات الطالب:</h2>`;
-        studentRow.forEach((data, index) => {
-          if (data && headers[index]) {
-            resultDiv.innerHTML += `<p class="mt-2 p-2 bg-gray-100 rounded-lg shadow-sm"><strong>${headers[index]}:</strong> ${data}</p>`;
-          }
-        });
-
-      } catch (error) {
-        resultDiv.innerHTML = '<p class="text-red-500 font-semibold">⚠️ حدث خطأ أثناء تحميل البيانات.</p>';
-      }
     });
   </script>
 </body>
