--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- شعار المدرسة -->
     <img src="https://j.top4top.io/p_3327lje811.jpg" alt="شعار المدرسة" class="mx-auto w-24 h-24 rounded-full shadow-md mb-4">
     
-    <h1 class="text-2xl font-bold text-gray-700">منصة الفيء الرقمية</h1>
+    <h1 class="text-2xl font-bold text-gray-700">منصة الدريز الرقمية</h1>
     <p class="text-gray-500 text-sm mb-4">مدرسة محمد بن سليمان الغافري</p>
 
     <!-- إدخال رقم الطالب -->
