--- a/index.html
+++ b/index.html
@@ -6,46 +6,225 @@
   <title>منصة الدريز الرقمية</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(to right, #4A90E2, #50A5E2);
-      font-family: 'Tajawal', sans-serif;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      font-family: 'El Messiri', sans-serif;
+      color: #fff;
     }
     .card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     }
-    .table-header {
-      background-color: #4A90E2;
-      color: white;
+    .logo-glow {
+      filter: drop-shadow(0 0 15px rgba(255, 255, 255, 0.7));
+    }
+    .marquee {
+      white-space: nowrap;
+      overflow: hidden;
+      box-sizing: border-box;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 10px;
+      border-radius: 10px;
+      margin: 20px 0;
+      font-size: 1.1rem;
+    }
+    .marquee span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: marquee 20s linear infinite;
+    }
+    @keyframes marquee {
+      0% { transform: translateX(-100%); }
+      100% { transform: translateX(100%); }
+    }
+    .data-card {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 15px;
+      margin-bottom: 10px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .data-card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .data-title {
+      color: #ffd700;
       font-weight: bold;
+      font-size: 1.2rem;
     }
-    .table-row:nth-child(even) {
-      background-color: #f9fafb;
+    .data-value {
+      color: #fff;
+      font-size: 1.1rem;
     }
-    .table-row:hover {
-      background-color: #f0f4f8;
+    .footer {
+      background: rgba(0, 0, 0, 0.2);
+      padding: 15px;
+      border-radius: 12px;
+      margin-top: 20px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #fff;
+    }
+    .input-field {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      color: #fff;
+    }
+    .input-field:focus {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: #ffd700;
+    }
+    .select-field {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      color: #fff;
+    }
+    .select-field:focus {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: #ffd700;
+    }
+    .button-primary {
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      color: #1e3c72;
+      font-weight: bold;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .button-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .button-secondary {
+      background: linear-gradient(135deg, #4A90E2, #50A5E2);
+      color: #fff;
+      font-weight: bold;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .button-secondary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .button-tertiary {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
+      font-weight: bold;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .button-tertiary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 12px;
+      padding: 20px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+    }
+    .modal-content h2 {
+      color: #1e3c72;
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+    }
+    .modal-content p {
+      color: #333;
+      font-size: 1.1rem;
+    }
+    .modal-content button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      border-radius: 8px;
+      background: #4A90E2;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+    }
+    .header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 1000;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    .header-buttons {
+      display: flex;
+      gap: 10px;
+    }
+    .header-buttons button {
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .header-buttons button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
-  <div class="card bg-white rounded-lg shadow-2xl p-6 max-w-md w-full text-center">
+  <!-- الهيدر -->
+  <div class="header">
+    <h1 class="text-xl font-bold text-gold-500">منصة الدريز الرقمية</h1>
+    <div class="header-buttons">
+      <button id="newsButton" class="bg-blue-600 text-white hover:bg-blue-700">
+        المستجدات
+      </button>
+      <button id="feedbackButton" class="bg-purple-600 text-white hover:bg-purple-700">
+        المقترحات والآراء
+      </button>
+    </div>
+  </div>
+
+  <div class="card rounded-lg shadow-2xl p-8 max-w-md w-full text-center mt-20">
     <!-- شعار المدرسة -->
-    <img src="https://j.top4top.io/p_3327lje811.jpg" alt="شعار المدرسة" class="mx-auto w-24 h-24 rounded-full shadow-md mb-4">
-    
-    <h1 class="text-2xl font-bold text-gray-700">منصة الدريز الرقمية</h1>
-    <p class="text-gray-500 text-sm mb-4">مدرسة محمد بن سليمان الغافري</p>
+    <img src="https://j.top4top.io/p_3327lje811.jpg" alt="شعار المدرسة" class="mx-auto w-28 h-28 rounded-full shadow-md mb-6 logo-glow">
+
+    <!-- اسم المنصة والمدرسة -->
+    <h1 class="text-3xl font-bold text-gold-500 logo-glow">منصة الدريز الرقمية</h1>
+    <p class="text-gray-300 text-sm mb-6 logo-glow">مدرسة محمد بن سليمان الغافري</p>
+
+    <!-- شريط تمرير مواعيد التقييم -->
+    <div class="marquee">
+      <span>🌟 مرحبًا بكم في منصة الدريز الرقمية! يمكنكم الاطلاع على المستجدات مثل مواعيد تطبيق أدوات التقويم المستمر (الاختبارات) من خلال الضغط على زر "المستجدات". 🌟</span>
+    </div>
 
     <!-- إدخال رقم الطالب -->
-    <label for="studentId" class="block text-lg font-medium text-gray-700">أدخل رقم الطالب:</label>
-    <input type="text" id="studentId" class="mt-1 mb-4 w-full p-2 border border-gray-300 rounded-lg text-center focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+    <label for="studentId" class="block text-lg font-medium text-gold-500">أدخل رقم الطالب:</label>
+    <input type="text" id="studentId" class="mt-2 mb-6 w-full p-3 rounded-lg input-field focus:outline-none">
 
     <!-- اختيار المادة -->
-    <label for="subjectSelect" class="block text-lg font-medium text-gray-700">اختر المادة:</label>
-    <select id="subjectSelect" class="mt-1 mb-4 w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+    <label for="subjectSelect" class="block text-lg font-medium text-gold-500">اختر المادة:</label>
+    <select id="subjectSelect" class="mt-2 mb-6 w-full p-3 rounded-lg select-field focus:outline-none">
       <option value="">-- اختر المادة --</option>
       <option value="social">📚 الدراسات الاجتماعية</option>
       <option value="islamic">🕌 التربية الإسلامية</option>
@@ -62,15 +241,45 @@
     </select>
 
     <!-- زر البحث -->
-    <button id="fetchDataButton" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+    <button id="fetchDataButton" class="w-full py-3 rounded-lg button-primary focus:outline-none">
       عرض البيانات
     </button>
 
     <!-- عرض النتائج -->
-    <div id="result" class="mt-6 text-right text-gray-800"></div>
+    <div id="result" class="mt-8 text-right"></div>
+
+    <!-- تذييل المنصة -->
+    <div class="footer">
+      جميع الحقوق محفوظة © لإدارة مدرسة محمد بن سليمان الغافري
+    </div>
+  </div>
+
+  <!-- نافذة المستجدات -->
+  <div id="newsModal" class="modal">
+    <div class="modal-content">
+      <h2>🌟 مرحبًا بكم في منصة الدريز الرقمية! 🌟</h2>
+      <p>يمكنكم الاطلاع على المستجدات مثل مواعيد تطبيق أدوات التقويم المستمر (الاختبارات) هنا. نتمنى لكم تجربة ممتعة ومفيدة!</p>
+      <button id="closeModalButton">إغلاق</button>
+    </div>
   </div>
 
   <script>
+    // فتح نافذة المستجدات
+    document.getElementById('newsButton').addEventListener('click', () => {
+      document.getElementById('newsModal').style.display = 'flex';
+    });
+
+    // إغلاق نافذة المستجدات
+    document.getElementById('closeModalButton').addEventListener('click', () => {
+      document.getElementById('newsModal').style.display = 'none';
+    });
+
+    // فتح رابط المقترحات والآراء
+    document.getElementById('feedbackButton').addEventListener('click', () => {
+      window.open("https://docs.google.com/forms/d/e/1FAIpQLScxSf0YQ5K1OyJhwh-LuzHlYD7qPlMi6wRRHai7hYWEF3Z1cg/viewform?usp=header", "_blank");
+    });
+
+    // عرض بيانات الطالب
     document.getElementById('fetchDataButton').addEventListener('click', async () => {
       const studentId = document.getElementById('studentId').value.trim();
       const subject = document.getElementById('subjectSelect').value;
@@ -92,7 +301,7 @@
         english10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSKhbG0SfWfab6k5v1rPy5DPa9w-6vgcrVTXm_yZr7QmfLOJi6tAOcAQVeKhztfXO9FtB5Px0e5Y6qb/pub?gid=0&single=true&output=csv"
       };
 
-      resultDiv.innerHTML = '<p class="text-blue-600 font-semibold">🔄 جاري تحميل البيانات...</p>';
+      resultDiv.innerHTML = '<p class="text-blue-400 font-semibold">🔄 جاري تحميل البيانات...</p>';
 
       try {
         const response = await fetch(subjectLinks[subject]);
@@ -103,32 +312,27 @@
         const studentRow = rows.find(row => row[1].trim() === studentId);
 
         if (!studentRow) {
-          resultDiv.innerHTML = '<p class="text-red-500 font-semibold">❌ لم يتم العثور على بيانات لهذا الطالب.</p>';
+          resultDiv.innerHTML = '<p class="text-red-400 font-semibold">❌ لم يتم العثور على بيانات لهذا الطالب.</p>';
           return;
         }
 
-        // إنشاء الجدول
-        let tableHTML = `
-          <div class="overflow-x-auto">
-            <table class="w-full bg-white rounded-lg shadow-md">
-              <thead>
-                <tr class="table-header">
-                  ${headers.map(header => `<th class="px-4 py-2">${header}</th>`).join('')}
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="table-row">
-                  ${studentRow.map(data => `<td class="px-4 py-2 border">${data}</td>`).join('')}
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        `;
+        // إنشاء عرض عمودي للبيانات
+        let dataHTML = `<h2 class="text-xl font-bold text-gold-500 mb-6">📌 بيانات الطالب:</h2>`;
+        headers.forEach((header, index) => {
+          if (header && studentRow[index]) {
+            dataHTML += `
+              <div class="data-card">
+                <div class="data-title">${header}</div>
+                <div class="data-value">${studentRow[index]}</div>
+              </div>
+            `;
+          }
+        });
 
-        resultDiv.innerHTML = `<h2 class="text-lg font-bold text-gray-700 mb-4">📌 بيانات الطالب:</h2>${tableHTML}`;
+        resultDiv.innerHTML = dataHTML;
 
       } catch (error) {
-        resultDiv.innerHTML = '<p class="text-red-500 font-semibold">⚠️ حدث خطأ أثناء تحميل البيانات.</p>';
+        resultDiv.innerHTML = '<p class="text-red-400 font-semibold">⚠️ حدث خطأ أثناء تحميل البيانات.</p>';
       }
     });
   </script>
