--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>منصة تواصل الرقمية</title>
+  <title>منصة تواصل</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
     .marquee span {
       display: inline-block;
       padding-left: 100%;
-      animation: marquee 20s linear infinite;
+      animation: marquee 30s linear infinite; /* تم إبطاء السرعة */
     }
     @keyframes marquee {
       0% { transform: translateX(-100%); }
@@ -176,7 +176,7 @@
 <body class="min-h-screen flex items-center justify-center p-4">
   <!-- الهيدر -->
   <div class="header">
-    <h1 class="text-xl font-bold text-gold-500">منصة تواصل الرقمية</h1>
+    <h1 class="text-xl font-bold text-gold-500">منصة تواصل</h1>
     <div class="header-buttons">
       <button id="newsButton">
         المستجدات
@@ -192,12 +192,12 @@
     <img src="https://j.top4top.io/p_3327lje811.jpg" alt="شعار المدرسة" class="mx-auto w-28 h-28 rounded-full shadow-md mb-6 logo-glow">
 
     <!-- اسم المنصة والمدرسة -->
-    <h1 class="text-3xl font-bold text-gold-500 logo-glow">منصة تواصل الرقمية</h1>
+    <h1 class="text-3xl font-bold text-gold-500 logo-glow">منصة تواصل</h1>
     <p class="text-gray-300 text-sm mb-6 logo-glow">مدرسة محمد بن سليمان الغافري</p>
 
     <!-- شريط تمرير مواعيد التقييم -->
     <div class="marquee">
-      <span>🌟 مرحبًا بكم في منصة تواصل الرقمية! يمكنكم الاطلاع على المستجدات مثل مواعيد تطبيق أدوات التقويم المستمر (الاختبارات) من خلال الضغط على زر "المستجدات". 🌟</span>
+      <span>🌟 مدرسة محمد بن سليمان الغافري ترحب بكم ، حيث تتجدد الأفكار وتتغير الطرق ، ويبقى الهدف ثابتًا واضحًا جليًا: التقدم بخطوات ثابتة نحو آفاق التقدم المعرفي بأحدث الأساليب والتقنيات. 🌟</span>
     </div>
 
     <!-- إدخال رقم الطالب -->
@@ -239,7 +239,7 @@
   <!-- نافذة المستجدات -->
   <div id="newsModal" class="modal">
     <div class="modal-content">
-      <h2>🌟 مرحبًا بكم في منصة الدريز الرقمية! 🌟</h2>
+      <h2>🌟 مرحبًا بكم في منصة تواصل! 🌟</h2>
       <p>يمكنكم الاطلاع على المستجدات مثل مواعيد تطبيق أدوات التقويم المستمر (الاختبارات) هنا. نتمنى لكم تجربة ممتعة ومفيدة!</p>
       <button id="closeModalButton">إغلاق</button>
     </div>
