--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     .marquee span {
       display: inline-block;
       padding-left: 100%;
-      animation: marquee 30s linear infinite; /* تم إبطاء السرعة */
+      animation: marquee 30s linear infinite;
     }
     @keyframes marquee {
       0% { transform: translateX(-100%); }
@@ -100,6 +100,16 @@
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
     .button-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .button-certificate {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
+      font-weight: bold;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .button-certificate:hover {
       transform: translateY(-2px);
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
@@ -197,7 +207,7 @@
 
     <!-- شريط تمرير مواعيد التقييم -->
     <div class="marquee">
-      <span>🌟 مدرسة محمد بن سليمان الغافري ترحب بكم ، حيث تتجدد الأفكار وتتغير الطرق ، ويبقى الهدف ثابتًا واضحًا جليًا: التقدم بخطوات ثابتة نحو آفاق التقدم المعرفي بأحدث الأساليب والتقنيات. 🌟</span>
+      <span>🌟 مدرسة محمد بن سليمان الغافري ترحب بكم، حيث تتجدد الأفكار وتتغير الطرق، ويبقى الهدف ثابتًا واضحًا جليًا: التقدم بخطوات ثابتة نحو آفاق التقدم المعرفي بأحدث الأساليب والتقنيات. 🌟</span>
     </div>
 
     <!-- إدخال رقم الطالب -->
@@ -230,6 +240,11 @@
     <!-- عرض النتائج -->
     <div id="result" class="mt-8 text-right"></div>
 
+    <!-- زر الشهادات -->
+    <button id="certificateButton" class="w-full py-3 rounded-lg button-certificate mt-6 focus:outline-none">
+      الشهادات
+    </button>
+
     <!-- تذييل المنصة -->
     <div class="footer">
       جميع الحقوق محفوظة © لإدارة مدرسة محمد بن سليمان الغافري
@@ -259,6 +274,11 @@
     // فتح رابط المقترحات والآراء
     document.getElementById('feedbackButton').addEventListener('click', () => {
       window.open("https://docs.google.com/forms/d/e/1FAIpQLScxSf0YQ5K1OyJhwh-LuzHlYD7qPlMi6wRRHai7hYWEF3Z1cg/viewform?usp=header", "_blank");
+    });
+
+    // فتح رابط الشهادات
+    document.getElementById('certificateButton').addEventListener('click', () => {
+      window.open("https://mohdschool.github.io/certificate/", "_blank");
     });
 
     // عرض بيانات الطالب
@@ -313,7 +333,7 @@
 
         resultDiv.innerHTML = dataHTML;
 
-      } catch (error) {
+} catch (error) {
         resultDiv.innerHTML = '<p class="text-red-400 font-semibold">⚠️ حدث خطأ أثناء تحميل البيانات.</p>';
       }
     });
