--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
       <option value="physics">🔬 الفيزياء</option>
       <option value="science">🧪 العلوم</option>
       <option value="chemistry">🧫 الكيمياء</option>
-      <option value="biology">🌿 الأحياء</option>
+      <option value="biology">🌿 الأحياء</option>    
+      <option value="behavior">📊 سلوك الطالب</option>
     </select>
 
     <!-- زر البحث -->
@@ -301,6 +302,7 @@
         math10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRtOrt04XkbLCsuQTQhSpuxaxKQmJ_NF_ThauuSYBlNoQEWkEPs8xWUcDYDUQcctAXelNeFZxR4-uqZ/pub?gid=0&single=true&output=csv",
         english5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFFnnz9YGNyyOd0Nd2c2cKCEQoElKl9u5XXIKApL-XV3qucYI-0j-S43_OsF-X8Hhtwj3NaEy7LpeL/pub?gid=0&single=true&output=csv",
         english10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSKhbG0SfWfab6k5v1rPy5DPa9w-6vgcrVTXm_yZr7QmfLOJi6tAOcAQVeKhztfXO9FtB5Px0e5Y6qb/pub?gid=0&single=true&output=csv"
+        behavior: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQlLwgTemkiKbB9TXOpqVFkkWKKPO5GeB1KrMiKqpJD3cJaHHTseH38gw5IoaW-e5UYS9Yeo-5TLY7n/pub?gid=1539188647&single=true&output=csv
       };
 
       resultDiv.innerHTML = '<p class="text-blue-400 font-semibold">🔄 جاري تحميل البيانات...</p>';
