--- a/index.html
+++ b/index.html
@@ -255,7 +255,15 @@
   <div id="newsModal" class="modal">
     <div class="modal-content">
       <h2>🌟 مرحبًا بكم في منصة تواصل! 🌟</h2>
-      <p>يمكنكم الاطلاع على المستجدات مثل مواعيد تطبيق أدوات التقويم المستمر (الاختبارات) هنا. نتمنى لكم تجربة ممتعة ومفيدة!</p>
+      <p>إلى شركائنا في بناء هذا الصرح التعليمي الشامخ ( أولياء أمور طلابنا الكرام ) وإلى أبطال مدرستنا طلابنا النجباء الذين يشكلون بوصلتنا نحو المستقبل…
+
+من هنا … من مدرسة محمد بن سليمان الغافري ننطلق برؤية واضحة ورسالة تحمل في طياتها طموحًا لا يعرف الحدود. 
+
+نقدم لكم منصتنا التعليمية ( منصة تواصل ) ليس كإضافة عابرة بل كدليلٍ حيّ على سعينا المستمر نحو التميز واستلهامًا لمسؤوليتنا المشتركة في تحقيق الريادة .
+
+نحن لا نبحث عن مجرّد تصدر القوائم ولا نركض خلف أضواء الشهرة بل نطمح لأن تكون هذه المدرسة منارةً تعليميةً أولى في سلطنة عُمان لا لذاتها بل لأجل أبنائها ليحجزوا مواقعهم في مقدمة المشهد العلمي ، في أرقى الجامعات ، وفي أعظم الميادين الفكرية والمعرفية محليًا وعالميًا.
+
+نحن هنا لأن المستقبل يبدأ من هنا.</p>
       <button id="closeModalButton">إغلاق</button>
     </div>
   </div>
