--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
     <!-- زر الشهادات -->
     <button id="certificateButton" class="w-full py-3 rounded-lg button-certificate mt-6 focus:outline-none">
-      الشهادات
+      بوابة استعلام الشهادات
     </button>
 
     <!-- تذييل المنصة -->
