--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <span>🌟 مدرسة محمد بن سليمان الغافري ترحب بكم، حيث تتجدد الأفكار وتتغير الطرق، ويبقى الهدف ثابتًا واضحًا جليًا: التقدم بخطوات ثابتة نحو آفاق التقدم المعرفي بأحدث الأساليب والتقنيات. 🌟</span>
     </div>
 
-    <!-- إدخال رقم الطالب -->
+    <!-- إدخال الرقم المدني للطالب -->
     <label for="studentId" class="block text-lg font-medium text-gold-500">أدخل رقم الطالب:</label>
     <input type="text" id="studentId" class="mt-2 mb-6 w-full p-3 rounded-lg input-field focus:outline-none">
 
@@ -226,7 +226,7 @@
       <option value="math10">📊 الرياضيات (الصف العاشر)</option>
       <option value="english5_9">📝 اللغة الإنجليزية (الصفوف 5-9)</option>
       <option value="english10">📝 اللغة الإنجليزية (الصف العاشر)</option>
-      <option value="physics">🔬 الفيزياء للصف التاسع</option>
+      <option value="physics">🔬 الفيزياء </option>
       <option value="science">🧪 العلوم</option>
       <option value="chemistry">🧫 الكيمياء</option>
       <option value="biology">🌿 الأحياء</option>    
@@ -254,7 +254,7 @@
   <!-- نافذة المستجدات -->
   <div id="newsModal" class="modal">
     <div class="modal-content">
-      <h2>🌟 مرحبًا بكم في منصة تواصل! 🌟</h2>
+      <h2>🌟 مرحبًا بكم في منصة تواصل 🌟</h2>
       <p>إلى شركائنا في بناء هذا الصرح التعليمي الشامخ (<strong>أولياء أمور طلابنا الكرام</strong>) وإلى أبطال مدرستنا طلابنا النجباء الذين يشكلون بوصلتنا نحو المستقبل…</p>
   
   <p>من هنا … من مدرسة محمد بن سليمان الغافري ننطلق برؤية واضحة ورسالة تحمل في طياتها طموحًا لا يعرف الحدود.</p>
@@ -309,8 +309,10 @@
         math10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRtOrt04XkbLCsuQTQhSpuxaxKQmJ_NF_ThauuSYBlNoQEWkEPs8xWUcDYDUQcctAXelNeFZxR4-uqZ/pub?gid=0&single=true&output=csv",
         english5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFFnnz9YGNyyOd0Nd2c2cKCEQoElKl9u5XXIKApL-XV3qucYI-0j-S43_OsF-X8Hhtwj3NaEy7LpeL/pub?gid=0&single=true&output=csv",
         english10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSKhbG0SfWfab6k5v1rPy5DPa9w-6vgcrVTXm_yZr7QmfLOJi6tAOcAQVeKhztfXO9FtB5Px0e5Y6qb/pub?gid=0&single=true&output=csv",
-        physics9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQfKq9UFhhb8P7cTX4mtlRwzku1F5xZuVMxq_Qmfn3j0yCefJwzjOIEj0CrYG9Je9ubAdRwXZusMuYr/pub?gid=0&single=true&output=csv",
-        science: "https://docs.google.com/spreadsheets/d/e/2PACX-1vShML8jSszGxHx6ESzcgf1DTYyPAvpeiYfhEt_6lxQ6xRBAeqbMa2blTI9lZVRXX-M5FNjAF4oRmLeY/pub?gid=0&single=true&output=csv"
+        physics: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQfKq9UFhhb8P7cTX4mtlRwzku1F5xZuVMxq_Qmfn3j0yCefJwzjOIEj0CrYG9Je9ubAdRwXZusMuYr/pub?gid=0&single=true&output=csv",
+        science: "https://docs.google.com/spreadsheets/d/e/2PACX-1vShML8jSszGxHx6ESzcgf1DTYyPAvpeiYfhEt_6lxQ6xRBAeqbMa2blTI9lZVRXX-M5FNjAF4oRmLeY/pub?gid=0&single=true&output=csv",
+        chemistry: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz8zyGR6OwEPE8bZt6M22YtkiVdnhx2uuyBfUbMH6BW7725Tn5oHGlOcuGdxPPjw4dO-AJkaGW7ju/pub?gid=0&single=true&output=csv",
+        biology: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSk_TuS5L3YexPjYyLlIL6nHFAvkafQKGCYwwKw57vBo1FWF97RM5oSQPCVKZuWsD9egF5r9gErhzMn/pub?gid=0&single=true&output=csv"
       };
 
       resultDiv.innerHTML = '<p class="text-blue-400 font-semibold">🔄 جاري تحميل البيانات...</p>';
