--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </div>
 
     <!-- إدخال الرقم المدني للطالب -->
-    <label for="studentId" class="block text-lg font-medium text-gold-500">أدخل رقم الطالب:</label>
+    <label for="studentId" class="block text-lg font-medium text-gold-500">أدخل الرقم المدني للطالب:</label>
     <input type="text" id="studentId" class="mt-2 mb-6 w-full p-3 rounded-lg input-field focus:outline-none">
 
     <!-- اختيار المادة -->
