--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
       <button id="feedbackButton">
         المقترحات والآراء
       </button>
+      <button id="behaviorButton">
+        منصة السلوك
+      </button>
     </div>
   </div>
 
@@ -287,6 +290,11 @@
     // فتح رابط الشهادات
     document.getElementById('certificateButton').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/certificate/", "_blank");
+    });
+
+    // فتح رابط منصة السلوك
+    document.getElementById('behaviorButton').addEventListener('click', () => {
+      window.open("https://mohdschool.github.io/behavior/", "_blank");
     });
 
     // عرض بيانات الطالب
