--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       background: rgba(255, 255, 255, 0.9);
       border-radius: 12px;
       padding: 20px;
-      max-width: 400px;
+      max-width: 500px;
       width: 90%;
       text-align: center;
     }
@@ -181,6 +181,23 @@
       border: none;
       cursor: pointer;
     }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      text-align: center;
+    }
+    th {
+      background-color: #f2f2f2;
+      color: #1e3c72;
+    }
+    tr:hover {
+      background-color: #f5f5f5;
+    }
   </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
@@ -197,9 +214,13 @@
       <button id="behaviorButton">
         منصة السلوك
       </button>
+      <button id="scheduleButton">
+        التوقيت الزمني للحصص
+      </button>
     </div>
   </div>
 
+  <!-- البطاقة الرئيسية -->
   <div class="card rounded-lg shadow-2xl p-8 max-w-md w-full text-center mt-20">
     <!-- شعار المدرسة -->
     <img src="https://j.top4top.io/p_3327lje811.jpg" alt="شعار المدرسة" class="mx-auto w-28 h-28 rounded-full shadow-md mb-6 logo-glow">
@@ -259,15 +280,62 @@
     <div class="modal-content">
       <h2>🌟 مرحبًا بكم في منصة تواصل 🌟</h2>
       <p>إلى شركائنا في بناء هذا الصرح التعليمي الشامخ (<strong>أولياء أمور طلابنا الكرام</strong>) وإلى أبطال مدرستنا طلابنا النجباء الذين يشكلون بوصلتنا نحو المستقبل…</p>
-  
-  <p>من هنا … من مدرسة محمد بن سليمان الغافري ننطلق برؤية واضحة ورسالة تحمل في طياتها طموحًا لا يعرف الحدود.</p>
-  
-  <p>نقدم لكم منصتنا التعليمية (<strong>منصة تواصل</strong>) ليس كإضافة عابرة بل كدليلٍ حيّ على سعينا المستمر نحو التميز واستلهامًا لمسؤوليتنا المشتركة في تحقيق الريادة.</p>
-  
-  <p>نحن لا نبحث عن مجرّد تصدر القوائم ولا نركض خلف أضواء الشهرة بل نطمح لأن تكون هذه المدرسة منارةً تعليميةً أولى في سلطنة عُمان لا لذاتها بل لأجل أبنائها ليحجزوا مواقعهم في مقدمة المشهد العلمي ، في أرقى الجامعات ، وفي أعظم الميادين الفكرية والمعرفية محليًا وعالميًا.</p>
-  
-  <p>نحن هنا لأن المستقبل يبدأ من هنا.</p>
+      <p>من هنا … من مدرسة محمد بن سليمان الغافري ننطلق برؤية واضحة ورسالة تحمل في طياتها طموحًا لا يعرف الحدود.</p>
+      <p>نقدم لكم منصتنا التعليمية (<strong>منصة تواصل</strong>) ليس كإضافة عابرة بل كدليلٍ حيّ على سعينا المستمر نحو التميز واستلهامًا لمسؤوليتنا المشتركة في تحقيق الريادة.</p>
+      <p>نحن لا نبحث عن مجرّد تصدر القوائم ولا نركض خلف أضواء الشهرة بل نطمح لأن تكون هذه المدرسة منارةً تعليميةً أولى في سلطنة عُمان لا لذاتها بل لأجل أبنائها ليحجزوا مواقعهم في مقدمة المشهد العلمي ، في أرقى الجامعات ، وفي أعظم الميادين الفكرية والمعرفية محليًا وعالميًا.</p>
+      <p>نحن هنا لأن المستقبل يبدأ من هنا.</p>
       <button id="closeModalButton">إغلاق</button>
+    </div>
+  </div>
+
+  <!-- نافذة الجدول الزمني للحصص -->
+  <div id="scheduleModal" class="modal">
+    <div class="modal-content">
+      <h2 class="text-xl font-bold text-gold-500 mb-6">🗓️ الجدول الزمني للحصص خلال شهر رمضان</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>الحصة</th>
+            <th>الزمن (من - إلى)</th>
+            <th>الطابور (10 دقائق)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>الحصة الأولى</td>
+            <td>7:40 - 8:20</td>
+            <td>7:30 - 7:40</td>
+          </tr>
+          <tr>
+            <td>الحصة الثانية</td>
+            <td>8:30 - 9:10</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>الحصة الثالثة</td>
+            <td>9:20 - 10:00</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>الحصة الرابعة</td>
+            <td>10:10 - 10:50</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>الحصة الخامسة</td>
+            <td>11:00 - 11:40</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>الحصة السادسة</td>
+            <td>11:50 - 12:30</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
+      <button id="closeScheduleModalButton" class="mt-6 w-full py-3 rounded-lg button-primary focus:outline-none">
+        إغلاق
+      </button>
     </div>
   </div>
 
@@ -287,14 +355,24 @@
       window.open("https://docs.google.com/forms/d/e/1FAIpQLScxSf0YQ5K1OyJhwh-LuzHlYD7qPlMi6wRRHai7hYWEF3Z1cg/viewform?usp=header", "_blank");
     });
 
-    // فتح رابط الشهادات
-    document.getElementById('certificateButton').addEventListener('click', () => {
-      window.open("https://mohdschool.github.io/certificate/", "_blank");
-    });
-
     // فتح رابط منصة السلوك
     document.getElementById('behaviorButton').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/behavior/", "_blank");
+    });
+
+    // فتح نافذة الجدول الزمني للحصص
+    document.getElementById('scheduleButton').addEventListener('click', () => {
+      document.getElementById('scheduleModal').style.display = 'flex';
+    });
+
+    // إغلاق نافذة الجدول الزمني للحصص
+    document.getElementById('closeScheduleModalButton').addEventListener('click', () => {
+      document.getElementById('scheduleModal').style.display = 'none';
+    });
+
+    // فتح رابط الشهادات
+    document.getElementById('certificateButton').addEventListener('click', () => {
+      window.open("https://mohdschool.github.io/certificate/", "_blank");
     });
 
     // عرض بيانات الطالب
