--- a/index.html
+++ b/index.html
@@ -345,41 +345,61 @@
       <table>
         <thead>
           <tr>
-            <th>الحصة</th>
-            <th>الزمن (من - إلى)</th>
-            <th>الطابور (10 دقائق)</th>
+            <th>الحصة</th
+            <th>المدة</th>  
+            <th>الزمن (من)</th>
+            <th> ( إلى)</th>
           </tr>
         </thead>
         <tbody>
+          
+          <tr>
+            <td>الطابور</td>
+             <td>10 m</td>
+            <td>7:30 </td>
+            <td> 7:40</td>
+        
           <tr>
             <td>الحصة الأولى</td>
-            <td>7:40 - 8:20</td>
-            <td>7:30 - 7:40</td>
+            <td> 35 دقيقة</td>
+            <td>7:40</td>
+            <td>8:15</td>
           </tr>
           <tr>
             <td>الحصة الثانية</td>
-            <td>8:30 - 9:10</td>
-            <td>-</td>
+            <td>35 دقيقة </td>
+            <td>8:15</td>
+            <td>8:50</td>
           </tr>
           <tr>
             <td>الحصة الثالثة</td>
-            <td>9:20 - 10:00</td>
-            <td>-</td>
+              <td>35 دقيقة </td>
+            <td>8:50</td>
+            <td>9:25</td>
           </tr>
           <tr>
             <td>الحصة الرابعة</td>
-            <td>10:10 - 10:50</td>
-            <td>-</td>
+            <td>35 دقيقة </td>
+            <td>9:25</td>
+            <td>10:00</td>
           </tr>
           <tr>
-            <td>الحصة الخامسة</td>
-            <td>11:00 - 11:40</td>
-            <td>-</td>
+            <td>الفسحة </td>
+            <td>10 دقائق </td>
+            <td>10:00 </td>
+            <td>10:10</td>
+          </tr>
+            <tr>
+           <td>الحصة الخامسة </td>
+            <td>35 دقيقة </td>
+            <td>10:10 </td>
+            <td>10:45</td>
           </tr>
           <tr>
             <td>الحصة السادسة</td>
-            <td>11:50 - 12:30</td>
-            <td>-</td>
+            <td>35 دقيقة </td>
+            <td>10:45 </td>
+            <td>11:20</td>
           </tr>
         </tbody>
       </table>
