--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <thead>
           <tr>
             <th>الحصة</th
-            <th>المدة</th>  
+            <th>المدة </th>  
             <th>الزمن (من)</th>
             <th> ( إلى)</th>
           </tr>
@@ -355,7 +355,7 @@
           
           <tr>
             <td>الطابور</td>
-             <td>10 m</td>
+             <td>10 دقيقة</td>
             <td>7:30 </td>
             <td> 7:40</td>
         
